--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Welcome to Zhaohui (Eric) Wang's Homepage</h1>
+          <h1>Zhaohui Wang</h1>
           <h2></h2>
         </header>
 <!--
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome!</h3>
 
 <p>A test!</p>
         </section>
