--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Zhaohui Wang</h1>
+          <h1>Welcom to Zhaohui(Eric) Wang's pages</h1>
           <h2></h2>
         </header>
 <!--
